--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
         <head>
           <meta charset="utf-8">
           <title>Дом Наркомфина — Википедия</title>
-          <link rel="icon" href="images/x-icon" href="images/favicon.ico">
-          <link rel="icon" href="images/png" href="images/favicon.png">
+          <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
+          <link rel="icon" type="image/png" href="images/favicon.png" />
           <link rel="stylesheet" href="stylesheets/style.css">
           <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap" rel="stylesheet">
           <script src="javascripts/jquery-3.6.1.js" charset="utf-8"></script>
